--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
     "test": "jest --config=jest.config.json",
-    "start": "node server/server.js"
+    "start": "node server/server.js",
+    "heroku-postbuild":"npm run build:prod"
   },
   "author": "evangelos",
   "license": "ISC"
